--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Chart Spec - 重新定义专业图表设计</title>
     <style>
         :root {
-            --apple-blue: #0071E3;
+            --apple-blue: #5B8FF9;
             --apple-blue-rgb: 0, 113, 227;
             --apple-gray-50: #FBFBFD;
             --apple-gray-100: #F5F5F7;
@@ -315,7 +315,7 @@
         }
 
         .bento-featured {
-            background: linear-gradient(135deg, #0071E3 0%, #004F9E 100%);
+            background: linear-gradient(135deg, #5B8FF9 0%, #004F9E 100%);
             color: white;
             border: none;
         }
@@ -459,7 +459,7 @@
                     <p class="bento-desc">平滑的贝塞尔曲线与灵动的交互反馈。</p>
                     <div class="bento-visual" style="font-size: 80px;">📈</div>
                 </a>
-                <a href="06-pie-zh/index.html" class="bento-item bento-6">
+                <a href="06-pie/index.html" class="bento-item bento-6">
                     <h3 class="bento-title">占比分析</h3>
                     <p class="bento-desc">支持嵌套、多级联动与语义化标注。</p>
                     <div class="bento-visual" style="font-size: 80px;">🥧</div>
