--- a/x-axis-test/05-real-scene/index.html
+++ b/x-axis-test/05-real-scene/index.html
@@ -317,7 +317,7 @@
                 },
                 style: {
                     fontSize: <span class="number">11</span>,
-                    fill: <span class="string">'#646A73'</span>,
+                    fill: <span class="string">'#86868B'</span>,
                     textAlign: rotate === <span class="number">0</span> ? <span class="string">'center'</span> : <span class="string">'end'</span>,
                 },
             },
@@ -528,7 +528,7 @@ const SmartXAxis = {
                 },
                 style: {
                     fontSize: 11,
-                    fill: '#646A73',
+                    fill: '#86868B',
                     textAlign: rotate === 0 ? 'center' : 'end',
                 },
             },
