--- a/x-axis-test/06-multi-items/index.html
+++ b/x-axis-test/06-multi-items/index.html
@@ -116,7 +116,7 @@
         .space-bar {
             flex: 1;
             height: 24px;
-            background: #E5E6EB;
+            background: #E8E8ED;
             border-radius: 4px;
             position: relative;
             overflow: hidden;
@@ -308,7 +308,7 @@
         },
         style: {
             fontSize: <span class="number">11</span>,
-            fill: <span class="string">'#646A73'</span>,
+            fill: <span class="string">'#86868B'</span>,
             textAlign: <span class="string">'end'</span>,
         },
     },
@@ -542,7 +542,7 @@ new Column('chart-main', {
             formatter: (text) => truncate(text, 6),
             style: {
                 fontSize: 11,
-                fill: '#646A73',
+                fill: '#86868B',
                 textAlign: 'end',
             },
         },
