--- a/x-axis-test/index.html
+++ b/x-axis-test/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../common.css">
     <style>
         :root {
-            --apple-blue: #0071E3;
+            --apple-blue: #5B8FF9;
             --apple-gray-50: #FBFBFD;
             --apple-gray-100: #F5F5F7;
             --apple-gray-200: #E8E8ED;
