--- a/03-bar/index.html
+++ b/03-bar/index.html
@@ -30,11 +30,43 @@
 <div class="chart-container">
     <div class="chart-card">
         <div class="chart-card-header">
-            <span class="chart-title">产品销量排行 TOP8</span>
-            <span class="chart-tag green">Basic Bar</span>
+            <div class="header-left">
+                <span class="chart-title">2024年度产品销量排行 TOP8</span>
+            </div>
+            <div class="header-right">
+                <span class="chart-tag green">Basic Bar</span>
+                <button class="btn-view-code" onclick="toggleCode('code-bar', this)">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline></svg>
+                    Code
+                </button>
+            </div>
         </div>
         <div class="chart-meta">
-            <div class="chart-meta-title">2024年度产品销量统计</div>
+            <div class="chart-meta-left">
+                <div class="chart-meta-info">
+                    <span class="chart-meta-item"><span class="dot"></span>数据源: 销售系统, 库存报表</span>
+                    <span class="chart-meta-item"><span class="dot" style="background:#5AD8A6"></span>数据周期: 2024年度</span>
+                </div>
+            </div>
+            <div class="chart-filters">
+                <div class="filter-item">
+                    <span class="filter-label">按</span>
+                    <select class="filter-select">
+                        <option>品牌</option>
+                        <option>品类</option>
+                        <option>地区</option>
+                    </select>
+                    <span class="filter-label">× 分组</span>
+                </div>
+                <div class="filter-item">
+                    <span class="filter-label">日期:</span>
+                    <select class="filter-select">
+                        <option>2024年度</option>
+                        <option>2024.Q4</option>
+                        <option>2023年度</option>
+                    </select>
+                </div>
+            </div>
         </div>
         <div class="chart-body lg" style="position: relative;">
             <div class="axis-unit y-left">单位：台</div>
@@ -60,6 +92,34 @@
                     <div class="params-row"><span class="label">适用</span><span class="value highlight">长标签场景</span></div>
                 </div>
             </div>
+        </div>
+        <div class="chart-code-panel" id="code-bar">
+            <div class="code-header">
+                <span>Chart Configuration</span>
+                <button class="btn-copy-code" onclick="copyCode('code-bar-content')">复制代码</button>
+            </div>
+            <pre id="code-bar-content">const config = {
+    data: barData,
+    xField: 'sales',
+    yField: 'product',
+    padding: [20, 60, 30, 100],
+    color: '#5B8FF9',
+    barWidthRatio: 0.5,
+    barStyle: { radius: [0, 4, 4, 0] },
+    xAxis: {
+        label: { style: { fontSize: 11, fill: '#86868B' } },
+        grid: { line: { style: { stroke: '#E8E8ED', lineDash: [4, 4] } } },
+    },
+    yAxis: {
+        label: { style: { fontSize: 11, fill: '#86868B' } },
+        line: null,
+    },
+    label: {
+        position: 'right',
+        offset: 8,
+        style: { fill: '#5B8FF9', fontSize: 11 },
+    },
+};</pre>
         </div>
     </div>
 </div>
@@ -171,10 +231,10 @@
     },
     xAxis: {
         label: { formatter: (v) => (v / <span class="number">1000</span>).toFixed(<span class="number">0</span>) + <span class="string">'k'</span> },
-        grid: { line: { style: { stroke: <span class="string">'#E5E6EB'</span>, lineDash: [<span class="number">4</span>, <span class="number">4</span>] } } },
+        grid: { line: { style: { stroke: <span class="string">'#E8E8ED'</span>, lineDash: [<span class="number">4</span>, <span class="number">4</span>] } } },
     },
     yAxis: {
-        label: { style: { fontSize: <span class="number">11</span>, fill: <span class="string">'#646A73'</span> } },
+        label: { style: { fontSize: <span class="number">11</span>, fill: <span class="string">'#86868B'</span> } },
     },
 };
     </div>
@@ -210,11 +270,11 @@ new Bar('chart-basic', {
     },
     xAxis: {
         label: { formatter: (v) => (v / 1000).toFixed(0) + 'k' },
-        grid: { line: { style: { stroke: '#E5E6EB', lineDash: [4, 4] } } },
+        grid: { line: { style: { stroke: '#E8E8ED', lineDash: [4, 4] } } },
         line: null,
     },
     yAxis: {
-        label: { style: { fontSize: 11, fill: '#646A73' } },
+        label: { style: { fontSize: 11, fill: '#86868B' } },
         line: null,
         tickLine: null,
     },
