--- a/x-axis-test/02-medium-text/index.html
+++ b/x-axis-test/02-medium-text/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../common.css">
     <style>
         :root {
-            --apple-blue: #0071E3;
+            --apple-blue: #5B8FF9;
             --apple-gray-50: #FBFBFD;
             --apple-gray-100: #F5F5F7;
             --apple-gray-200: #E8E8ED;
@@ -210,7 +210,7 @@
             data,
             xField: 'region',
             yField: 'value',
-            color: '#34C759',
+            color: '#5AD8A6',
             columnWidthRatio: 0.5,
             columnStyle: { radius: [4, 4, 0, 0] },
             appendPadding: [20, 0, 0, 0],
@@ -228,7 +228,7 @@
             label: {
                 position: 'top',
                 offset: 10,
-                style: { fill: '#34C759', fontSize: 11, fontWeight: 600 }
+                style: { fill: '#5AD8A6', fontSize: 11, fontWeight: 600 }
             }
         }).render();
     </script>
